{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 765,
  "lineage": "5e53354d-8dd3-282a-60e2-64b2028fcea8",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:subnet/subnet-01e359c09554e4763",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 8187,
            "cidr_block": "172.32.96.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e359c09554e4763",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "752249616998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Attributes": "public",
              "Environment": "prod",
              "Name": "new-vpc-public-aps1a",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1",
              "subnet/type": "public"
            },
            "vpc_id": "vpc-0d337796c99964ecc"
          }
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b9718385e603b64",
            "association_id": "eipassoc-03915f096098cc1ea",
            "domain": "vpc",
            "id": "eipalloc-09b9718385e603b64",
            "instance": "i-05d9fecdf1d32b480",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0dd3af69d87c8e0b2",
            "private_dns": "ip-172-32-125-56.ap-south-1.compute.internal",
            "private_ip": "172.32.125.56",
            "public_dns": "ec2-13-202-131-47.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.131.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "prod-bastion-host",
              "Resource_type": "ec2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-bastion-host",
              "Resource_type": "ec2",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "data.aws_iam_policy_document.bastion_role",
            "module.bastion.aws_iam_instance_profile.default",
            "module.bastion.aws_iam_role.default",
            "module.bastion.aws_instance.default",
            "module.bastion.aws_security_group.default",
            "module.bastion.data.aws_ami.info",
            "module.bastion.data.aws_iam_policy_document.default",
            "module.bastion.data.aws_subnet.default",
            "module.bastion_aws_key_pair.aws_key_pair.generated",
            "module.bastion_aws_key_pair.aws_key_pair.imported",
            "module.bastion_aws_key_pair.tls_private_key.default",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0393c667f03357980",
            "arn": "arn:aws:ec2:ap-south-1:752249616998:instance/i-05d9fecdf1d32b480",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "prod-bastion-host",
            "id": "i-05d9fecdf1d32b480",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "woooba-prod-bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dd3af69d87c8e0b2",
            "private_dns": "ip-172-32-125-56.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.32.125.56",
            "public_dns": "ec2-3-110-212-14.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.212.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd15a7981397ee80",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e359c09554e4763",
            "tags": {
              "Environment": "prod",
              "Name": "prod-bastion-host",
              "Resource_type": "ec2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-bastion-host",
              "Resource_type": "ec2",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3d4598f53c5afa3"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "data.aws_iam_policy_document.bastion_role",
            "module.bastion.aws_iam_instance_profile.default",
            "module.bastion.aws_iam_role.default",
            "module.bastion.aws_security_group.default",
            "module.bastion.data.aws_ami.info",
            "module.bastion.data.aws_iam_policy_document.default",
            "module.bastion.data.aws_subnet.default",
            "module.bastion_aws_key_pair.aws_key_pair.generated",
            "module.bastion_aws_key_pair.aws_key_pair.imported",
            "module.bastion_aws_key_pair.tls_private_key.default",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:security-group/sg-0e3d4598f53c5afa3",
            "description": "Instance default security group (only egress access is allowed)",
            "egress": [],
            "id": "sg-0e3d4598f53c5afa3",
            "ingress": [],
            "name": "prod-bastion-host",
            "name_prefix": "",
            "owner_id": "752249616998",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-bastion-host",
              "Resource_type": "ec2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-bastion-host",
              "Resource_type": "ec2",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3001705615",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e3d4598f53c5afa3",
            "security_group_rule_id": "sgr-058dd58f98f0ffdb8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3556366379",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e3d4598f53c5afa3",
            "security_group_rule_id": "sgr-06717bc0a79d6e541",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1482364548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e3d4598f53c5afa3",
            "security_group_rule_id": "sgr-0fe96aeaf2c4d2d41",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:vpc/vpc-0d337796c99964ecc",
            "cidr_block": "172.32.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b62e70e2f25f5a40",
                "cidr_block": "172.32.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-040feb3a1d3d403e2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d337796c99964ecc",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0570fbe07baa7fb1a",
            "ipv6_cidr_block": "2406:da1a:a5b:eb00::/56",
            "main_route_table_id": "rtb-01b30dcb557800a62",
            "owner_id": "752249616998",
            "tags": {
              "Environment": "prod",
              "Name": "new-vpc",
              "Resource_type": "vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e62aae6136f13f0a",
            "domain": "vpc",
            "id": "eipalloc-0e62aae6136f13f0a",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-52-66-118-117.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.118.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1a",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1a",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08467c862863d66e5",
            "domain": "vpc",
            "id": "eipalloc-08467c862863d66e5",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-175-79.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.175.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1b",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1b",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028ee476ecde9e9dc",
            "domain": "vpc",
            "id": "eipalloc-028ee476ecde9e9dc",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-203-247-150.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.247.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1c",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1c",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e62aae6136f13f0a",
            "association_id": "eipassoc-0e17a9a305823d960",
            "connectivity_type": "public",
            "id": "nat-0c27943dd8b5ae441",
            "network_interface_id": "eni-00357d1501104abb9",
            "private_ip": "172.32.120.104",
            "public_ip": "52.66.118.117",
            "subnet_id": "subnet-01e359c09554e4763",
            "tags": {
              "Attributes": "nat",
              "Environment": "prod",
              "Name": "new-vpc-nat-aps1a",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true"
            },
            "tags_all": {
              "Attributes": "nat",
              "Environment": "prod",
              "Name": "new-vpc-nat-aps1a",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_eip.nat_ips",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08467c862863d66e5",
            "association_id": "eipassoc-034962bd08c00b3d9",
            "connectivity_type": "public",
            "id": "nat-09264a79180633ba1",
            "network_interface_id": "eni-05f64213127abf07a",
            "private_ip": "172.32.159.20",
            "public_ip": "15.207.175.79",
            "subnet_id": "subnet-09fc028aa18246368",
            "tags": {
              "Attributes": "nat",
              "Environment": "prod",
              "Name": "new-vpc-nat-aps1b",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true"
            },
            "tags_all": {
              "Attributes": "nat",
              "Environment": "prod",
              "Name": "new-vpc-nat-aps1b",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_eip.nat_ips",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028ee476ecde9e9dc",
            "association_id": "eipassoc-0378cb1c6ab994746",
            "connectivity_type": "public",
            "id": "nat-02e43352733430f20",
            "network_interface_id": "eni-048135e3ac481ba33",
            "private_ip": "172.32.162.46",
            "public_ip": "13.203.247.150",
            "subnet_id": "subnet-09d98a1dc8816b846",
            "tags": {
              "Attributes": "nat",
              "Environment": "prod",
              "Name": "new-vpc-nat-aps1c",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true"
            },
            "tags_all": {
              "Attributes": "nat",
              "Environment": "prod",
              "Name": "new-vpc-nat-aps1c",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_eip.nat_ips",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:network-acl/acl-0b656adad163a63f8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b656adad163a63f8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "752249616998",
            "subnet_ids": [
              "subnet-048978e6a88cfb394",
              "subnet-0742290def47d6fde",
              "subnet-0d2defec161069197"
            ],
            "tags": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:network-acl/acl-0f60148452513edc0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f60148452513edc0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "752249616998",
            "subnet_ids": [
              "subnet-01e359c09554e4763",
              "subnet-09d98a1dc8816b846",
              "subnet-09fc028aa18246368"
            ],
            "tags": {
              "Attributes": "public",
              "Environment": "prod",
              "Name": "new-vpc-public",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1",
              "subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Environment": "prod",
              "Name": "new-vpc-public",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1",
              "subnet/type": "public"
            },
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04fba90db1658cf8d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c27943dd8b5ae441",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04fba90db1658cf8d",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_nat_gateway.default",
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_eip.nat_ips",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ee2c274d74315b681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09264a79180633ba1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee2c274d74315b68",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_nat_gateway.default",
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_eip.nat_ips",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01357d81936c48eeb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02e43352733430f20",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01357d81936c48eeb",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_nat_gateway.default",
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_eip.nat_ips",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a26d001318fd95c2",
            "id": "r-rtb-02001a5152dab61611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02001a5152dab6161",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.public",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:route-table/rtb-04fba90db1658cf8d",
            "id": "rtb-04fba90db1658cf8d",
            "owner_id": "752249616998",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1a",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1a",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:route-table/rtb-0ee2c274d74315b68",
            "id": "rtb-0ee2c274d74315b68",
            "owner_id": "752249616998",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1b",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1b",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:route-table/rtb-01357d81936c48eeb",
            "id": "rtb-01357d81936c48eeb",
            "owner_id": "752249616998",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1c",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1c",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:route-table/rtb-02001a5152dab6161",
            "id": "rtb-02001a5152dab6161",
            "owner_id": "752249616998",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "public",
              "Environment": "prod",
              "Name": "new-vpc-public",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1",
              "subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Environment": "prod",
              "Name": "new-vpc-public",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1",
              "subnet/type": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e977cc47d6ca05d7",
            "route_table_id": "rtb-04fba90db1658cf8d",
            "subnet_id": "subnet-0742290def47d6fde"
          },
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be7a09776395b044",
            "route_table_id": "rtb-0ee2c274d74315b68",
            "subnet_id": "subnet-048978e6a88cfb394"
          },
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e79fdfaefc868ba4",
            "route_table_id": "rtb-01357d81936c48eeb",
            "subnet_id": "subnet-0d2defec161069197"
          },
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00148ebead51d0e51",
            "route_table_id": "rtb-02001a5152dab6161",
            "subnet_id": "subnet-01e359c09554e4763"
          },
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.public",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072a377621ada7be4",
            "route_table_id": "rtb-02001a5152dab6161",
            "subnet_id": "subnet-09fc028aa18246368"
          },
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.public",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b479dedd5b4ec9e5",
            "route_table_id": "rtb-02001a5152dab6161",
            "subnet_id": "subnet-09d98a1dc8816b846"
          },
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.public",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:subnet/subnet-0742290def47d6fde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.32.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0742290def47d6fde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "752249616998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1a",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1a",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:subnet/subnet-048978e6a88cfb394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.32.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048978e6a88cfb394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "752249616998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1b",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1b",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:subnet/subnet-0d2defec161069197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.32.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2defec161069197",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "752249616998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1c",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Environment": "prod",
              "Name": "new-vpc-private-aps1c",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/type": "private"
            },
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:subnet/subnet-01e359c09554e4763",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.32.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e359c09554e4763",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "752249616998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Environment": "prod",
              "Name": "new-vpc-public-aps1a",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1",
              "subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Environment": "prod",
              "Name": "new-vpc-public-aps1a",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1",
              "subnet/type": "public"
            },
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:subnet/subnet-09fc028aa18246368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.32.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fc028aa18246368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "752249616998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Environment": "prod",
              "Name": "new-vpc-public-aps1b",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1",
              "subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Environment": "prod",
              "Name": "new-vpc-public-aps1b",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1",
              "subnet/type": "public"
            },
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:subnet/subnet-09d98a1dc8816b846",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.32.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d98a1dc8816b846",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "752249616998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Environment": "prod",
              "Name": "new-vpc-public-aps1c",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1",
              "subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Environment": "prod",
              "Name": "new-vpc-public-aps1c",
              "Resource_type": "dynamic_subnets",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1",
              "subnet/type": "public"
            },
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:security-group/sg-08c71b9f696aebf0b",
            "description": "Security Group for EKS cluster",
            "egress": [],
            "id": "sg-08c71b9f696aebf0b",
            "ingress": [],
            "name": "my-new-cluster-cluster",
            "name_prefix": "",
            "owner_id": "752249616998",
            "revoke_rules_on_delete": false,
            "tags": {
              "Attributes": "cluster",
              "Environment": "prod",
              "Name": "my-new-cluster-cluster",
              "Resource_type": "eks_cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Attributes": "cluster",
              "Environment": "prod",
              "Name": "my-new-cluster-cluster",
              "Resource_type": "eks_cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-918875534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08c71b9f696aebf0b",
            "security_group_rule_id": "sgr-0aa3032ed54a16b77",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:security-group/sg-03c69e72c4191c95d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03c69e72c4191c95d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "752249616998",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "Default Security Group",
              "Resource_type": "vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "Default Security Group",
              "Resource_type": "vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:internet-gateway/igw-0a26d001318fd95c2",
            "id": "igw-0a26d001318fd95c2",
            "owner_id": "752249616998",
            "tags": {
              "Environment": "prod",
              "Name": "new-vpc",
              "Resource_type": "vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "new-vpc",
              "Resource_type": "vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d337796c99964ecc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-3343743789",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03c69e72c4191c95d",
            "security_group_rule_id": "sgr-0420c21671a5ac4ec",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_default_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.32.0.0/16"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-3160635256",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03c69e72c4191c95d",
            "security_group_rule_id": "sgr-01934de992fd9d256",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_default_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:752249616998:vpc/vpc-0d337796c99964ecc",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.32.0.0/16",
            "default_network_acl_id": "acl-09b0c86db953cf5b6",
            "default_route_table_id": "rtb-01b30dcb557800a62",
            "default_security_group_id": "sg-03c69e72c4191c95d",
            "dhcp_options_id": "dopt-040feb3a1d3d403e2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d337796c99964ecc",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0570fbe07baa7fb1a",
            "ipv6_cidr_block": "2406:da1a:a5b:eb00::/56",
            "ipv6_cidr_block_network_border_group": "ap-south-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b30dcb557800a62",
            "owner_id": "752249616998",
            "tags": {
              "Environment": "prod",
              "Name": "new-vpc",
              "Resource_type": "vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "new-vpc",
              "Resource_type": "vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}